-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: hotspot
-
b33
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8015041 | 8 | Bengt Rutisson | P3 | Resolved | Fixed | b91 |
It has turned out to be difficult to reproduce the issue in JDK-8011596. To make it possible to understand the issue if it happens again we need to get more information from the assert in ParMarkBitMap::verify_addr().
While going through this code path I realized that there is some dead code that can be removed.
While going through this code path I realized that there is some dead code that can be removed.
- backported by
-
JDK-8015041 Improve assert and remove some dead code from parMarkBitMap.hpp/cpp
-
- Resolved
-
- relates to
-
JDK-8011596 GC crashes during JPRT testing on OSX
-
- Closed
-