8014339: Improve assert and remove some dead code from parMarkBitMap.hpp/cpp

Reviewed-by: stefank, tschatzl